# KebabMotor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeMacros.cmake  Files_Editor.cmake  Files_Engine.cmake  Files_EngineLibraries.cmake  Files_Game.cmake  Files_GameLibraries.cmake  Files_Launcher.cmake  LICENSE.md  README.md
Editor/Source/: EditorMain.cpp  EditorMain.hpp
Editor/Source/Nodeboard/: Nodeboard.cpp  Nodeboard.hpp
Engine/Libraries/imgui/: imgui.cpp  imgui_demo.cpp
Engine/Source/: EngineMain.cpp  EngineMain.hpp
Engine/Source/Containers/: List.hpp  String.cpp  String.hpp
Engine/Source/Core/Containers/: List.hpp  String.cpp  String.hpp
Engine/Source/Core/Utilities/: Utilities.cpp  Utilities.hpp
Engine/Source/Nodes/: BaseNodes.cpp  BaseNodes.hpp
Engine/Source/Utilities/: Utilities.cpp  Utilities.hpp
Game/Source/: Main.cpp  Main.hpp
Game/Source/BaseGame/: BaseGame.cpp  BaseGame.hpp
Launcher/Source/: LauncherMain.cpp
Shared/: Platform.hpp  _PointerWrappers.hpp.deprecated
_External/: copylibs_filelist.json
